# readthedocs-rst-n2t

./: .gitignore  README.md  README.rst  conf.py  index.rst  my-notes.md  netlify.toml  pyproject.toml  requirements.txt
docs/source/: And.hdl  about.rst  conf.py  index.rst  intro.rst  myhdltest.rst
