[tool.poetry]
name = "readthedocs-rst-n2t"
version = "0.1.0"
description = ""
authors = ["Multum-non-multa Name <...>"]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^4.4.0"
alabaster = "^0.7.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
